--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -39,7 +39,7 @@
 }
 
 .btn.btn-primary {
-    @apply bg-pink-500 text-white active:bg-pink-600
+    @apply bg-blue-500 text-white active:bg-blue-600
 }
 
 .btn.btn-indigo {
@@ -72,7 +72,7 @@
 
 
 .sidebar-nav-active {
-    @apply text-xs uppercase py-3 font-bold block text-pink-500
+    @apply text-xs uppercase py-3 font-bold block text-blue-500
 }
 
 .sidebar-nav-active > i {
@@ -80,7 +80,7 @@
 }
 
 .sidebar-nav-active:hover {
-    @apply text-pink-600
+    @apply text-blue-600
 }
 
 .sidebar-nav {
